# nightjar

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  prompts.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  config.rs  config_io.rs  error.rs  lib.rs  partial.rs  poweroff.rs  preflight.rs  rclone.rs  state.rs  tree.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  motif.rs  theme.rs
examples/: crontab-autobackup.txt  crontab-reminder.txt  nightjar-reminder.sh
