[package]
name = "nightjar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"
