[package]
name = "nightjar-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nightjar-core.workspace = true
iced = { version = "0.14", features = ["tokio", "canvas", "image", "svg"] }
tokio = { version = "1", features = ["rt"] }
rfd = "0.17"
